# fantazia

./: .gitignore  README.md  pyproject.toml  run-tests.bat  setup.py
doc/source/: conf.py  index.rst  pitch.rst
fantazia/: __init__.py  theory.py
fantazia/utils/: bisect_utils.py
src/fantazia/: __init__.py  _theory.py  math_.py  theory.py  xen.py
src/fantazia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fantazia/_impl/: __init__.py  m21.py  math.py  math_.py  xen.py
src/fantazia/_impl/_snippet/: sympy_primepi.py
src/fantazia/_impl/math_/: group.py  mos.py  ntheory.py
src/fantazia/_impl/pitch/: edo.py  edo12.py  ji.py  mos.py
src/fantazia/_impl/pitch/abc/: base.py  diatonic.py  edo.py  edoCo5.py  mos.py  quasiDiatonic.py  wrapper.py
src/fantazia/_impl/synth/: __init__.py  _envelope.py  _waveform.py
src/fantazia/_impl/utils/: __init__.py  _cls.py  bitmap.py  cls.py  collection.py  number.py
src/fantazia/synth/: __init__.py  _waveform.py  envelope.py
src/fantazia/utils/: __init__.py  _cls.py  _number.py  bisect_utils.py
src/fantazia/xen/: __init__.py  _xen.py  edo.py  ji.py  mos.py
tests/: test_opitch.py  test_utils.py
