[project]
name = "fantazia"
version = "0.0.1"
authors = [{ name = "F. X. P.", email = "vanleefxp@gmail.com" }]
description = "A package for math-based music theory computation."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
keywords = ["music"]
dependencies = [
    "bidict>=0.23.1",
    "numpy>=2.2.4",
    "pyrsistent>=0.20.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "sortedcontainers>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/vanleefxp/fantazia"
Issues = "https://github.com/vanleefxp/fantazia/issues"

[project.optional-dependencies]
m21 = ["music21>=9.3.0"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

