[project]
name = "fantazia"
version = "0.1.0"
authors = [{ name = "F. X. P.", email = "vanleefxp@gmail.com" }]
description = "A package for math-based music theory computation."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE.txt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["music", "music theory", "notation", "tuning", "temperament"]
dependencies = [
    "bidict>=0.23.1",
    "gmpy2>=2.2.1",
    "numpy>=2.2.4",
    "pyrsistent>=0.20.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "sortedcontainers>=2.4.0",
    "sympy>=1.14.0",
]

[project.urls]
Homepage = "https://github.com/vanleefxp/fantazia"
Issues = "https://github.com/vanleefxp/fantazia/issues"

[project.optional-dependencies]
m21 = ["music21>=9.3.0"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["coverage>=7.8.0", "esbonio>=0.16.5", "objprint>=0.3.0"]
