[project]
name = "fantazia"
version = "0.1.0"
authors = [{ name = "F. X. P.", email = "vanleefxp@gmail.com" }]
description = "A package for math-based music theory computation, with xenharmonic and microtonal supports."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE.txt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["music", "music theory", "notation", "tuning", "temperament"]
dependencies = [
    "bidict>=0.23.1",
    "bitmap2>=0.2.5",
    "egcd>=2.0.2",
    "frozendict>=2.4.6",
    "gmpy2>=2.2.1",
    "numpy>=2.2.4",
    "primefac>=2.0.12",
    "pyrsistent>=0.20.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "sortedcontainers>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/vanleefxp/fantazia"
Issues = "https://github.com/vanleefxp/fantazia/issues"

[project.optional-dependencies]
m21 = ["music21>=9.3.0"]
sp = ["sympy>=1.14.0"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "esbonio>=0.16.5",
    "objprint>=0.3.0",
    "viztracer>=1.0.4",
]
